apps/jeju-cruise-backend/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jeju-cruise-back
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.cruise.klr.kr
      secretName: api-cruise-klr-kr-tls
  rules:
    - host: api.cruise.klr.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jeju-cruise-back
                port:
                  number: 8080
